mdapi/Custom/objects/QC_Audit_Deficiencies__c.object
<CustomObject>
    <description>This is part of the Rehab deployment and is used to track the individual line items noted in the QC Audit process.</description>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Cabinets</fullName>
                </value>
                <value>
                    <fullName>Clog</fullName>
                </value>
                <value>
                    <fullName>Drywall</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Fence</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Paint</fullName>
                </value>
                <value>
                    <fullName>Pest</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Water Heater</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deficiency_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deficiency Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deficiency__c</fullName>
        <label>Deficiency</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_from_Super__c</fullName>
        <label>Notes from Super</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QC_Audit__c</fullName>
        <label>QC Audit</label>
        <referenceTo>QC_Audit__c</referenceTo>
        <relationshipLabel>QC Audit Deficiencies</relationshipLabel>
        <relationshipName>QC_Audit_Deficiencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PTL</fullName>
                </value>
                <value>
                    <fullName>Punchlist</fullName>
                </value>
                <value>
                    <fullName>Judgment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QC Audit Deficiencies</label>
    <nameField>
        <displayFormat>QCAD-{00000}</displayFormat>
        <label>QC Audit Deficiencies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QC Audit Deficiencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Dont_allow_Deficiency_QC_Closed</fullName>
        <active>true</active>
        <description>Restrict the user from adding a deficiency when the QC is closed</description>
        <errorConditionFormula>ISPICKVAL(QC_Audit__r.Status__c, &quot;QC Closed&quot;)</errorConditionFormula>
        <errorMessage>A New Deficiency can not be created since the audit has been closed</errorMessage>
    </validationRules>
</CustomObject>